tdf#53023 - Remove last empty paragraph from auto text

Remove the last empty paragraph before inserting an auto text.
The carriage return at the end of it is appended in
SwXMLTextBlockParContext::~SwXMLTextBlockParContext()
which can't be removed without introducing side effects.

In order to compensate for the change, a paragraph has been
added to the existing only text auto texts.

Change-Id: Ie098f23d7bdc70798197e5714e041c8fd79f0439
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143353
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>